# aqua-mod-framework

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/: FUNDING.yml
docs/: info.d.json  mod-name.d.json
public/: factorio-version.d.json  semver.d.json
src/: error.rs  main.rs
src/template/: context.rs  mod.rs  strategy.rs
templates/common/: .gitignore  README.md  aqua.config.yaml  changelog.yaml  tlconfig.lua
templates/single/: info.yaml
tests/: main.rs
